--- a/playbooks/22.AWS-Provisioning-using-Ansible/6_start_stop_terminate.yml
+++ b/playbooks/22.AWS-Provisioning-using-Ansible/6_start_stop_terminate.yml
@@ -5,7 +5,7 @@
    gather_facts: fasle
    tasks:
    - name: starting ec2 instance
-     ec2:
+     amazon.aws.ec2_instance:
       instance_ids: i-0fcd22cda22795df2
       region: us-east-1
       state: running
@@ -31,4 +31,3 @@
      tags:
       - terminate
       - never
-
