--- a/playbooks/22.AWS-Provisioning-using-Ansible/1_launch_ec2.yml
+++ b/playbooks/22.AWS-Provisioning-using-Ansible/1_launch_ec2.yml
@@ -1,11 +1,18 @@
 ---
- - name: Launching aws ec2 instance
-   hosts: localhost
-   gather_facts: false
-   tasks:
-   - name: Launching ec2 instance with ec2 module 
+- hosts: localhost
+  become: true
+  tasks:
+   - name: pip install
+     pip:
+      name: boto3
+      vars:
+      ansible_python_interpreter: /usr/bin/python3
+   - name: create a simple E2-server
      amazon.aws.ec2_instance:
-      instance_type: t2.micro
-      image: ami-08a0d1e16fc3f61ea
-      key_name: ansible_key (pem.key name we need to add)
-      region: us-east-1
+       name: aadhya
+       key_name: XXXXX
+       instance_type: t2.micro
+       security_group: default
+       image_id: ami-17a25d1
+       tags:
+        Environment: Testing
