--- a/playbooks/22.AWS-Provisioning-using-Ansible/5_terminate_ec2.yml
+++ b/playbooks/22.AWS-Provisioning-using-Ansible/5_terminate_ec2.yml
@@ -1,12 +1,15 @@
 ---
- - name: This play is used to work with ec2 instance
-   hosts: localhost
-   connection: local
-   gather_facts: fasle
-   tasks:
-   - name: terminating ec2 instance
+- hosts: localhost
+  become: true
+  tasks:
+   - name: pip install
+     pip:
+      name: ["boto3", "botocore"]
+     vars:
+       ansible_python_interpreter: /usr/bin/python3
+   - name: terminate a E2-server
      amazon.aws.ec2_instance:
-      instance_ids: i-006dafad18394c3cb
+      instance_ids: i-0b81
       region: us-east-1
       state: absent
       wait: yes
